kubernetes/apps/default/collabora/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "office.${PUBLIC_DOMAIN}"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
